# eyetrack

./: .gitignore  ExampleRW.m  README.md  recording_interface.asv  recording_interface.fig  recording_interface.m  save_video_to_location.asv  save_video_to_location.fig  save_video_to_location.m  start_app.fig  start_app.m  varsha_test.m
Mex/: mxNiChangeDepthViewPoint.cpp  mxNiChangeDepthViewPoint.m  mxNiCreateContext.mexw32  mxNiDepth.mexw32  mxNiDepthRealWorld.cpp  mxNiDepthRealWorld.m  mxNiDepthRealWorld.mexw32  mxNiPhoto.mexw32  mxNiSkeleton.m  mxNiStartCapture.mexw32  mxNiStopCapture.mexw32  mxNiUpdateContext.mexw32
MyNiViewer/: .cproject  .project  compiling_steps.txt  run_me.bat
MyNiViewer/Data/: SamplesConfig.xml  SamplesConfig_Test.xml  modules.xml
MyNiViewer/Debug/: Captured.oni  command_1.txt  command_3.txt  command_4.txt  command_5.txt  command_6.txt  convert_image.m  display_gui.fig  display_gui.m  display_images.asv  display_images.m  save_out_images_as_pngs.asv  thankyou.txt
MyNiViewer/Default/: command_1.txt  command_3.txt  command_4.txt  command_7.txt  command_8.txt  command_9.txt
MyNiViewer/Matlab/: display_gui.asv  display_gui.fig  display_gui.m  display_images.m  save_out_images_as_pngs.m
MyNiViewer/src/: Capture.cpp  Capture.h  Draw.cpp  Draw.h  NiViewer.cpp  NiViewer.vcxproj
code/board/: prob_to_point.m
code/data_processing/: center_bad_ims.txt  convert_png_data_jpg.m  convert_raw_data_format.m  convert_raw_data_jpg.m  gen_file_list_by_substr.py  generate_file_list.m  load_cropped_eye_intensity_linux.m  load_cropped_eyes_intensity.m  load_lrc_cropped_eyes.m  lr_bad_ims.txt  show_mean_eyes.m  show_mean_eyes_transformed.m  train_test_setup.m  xval_setup.m
code/face_view/eye_gaze_estimator/src/: CMakeLists.txt  main.cpp  main_gl.cpp
code/face_view/eye_gaze_estimator/src/ft_lib/: CMakeLists.txt  FaceTrackerWrapper.cpp
code/face_view/eye_gaze_estimator/src/head_pose/: CMakeLists.txt  CRForestEstimator.cpp  CRTree.cpp
code/face_view/eye_gaze_estimator/src/kinect_util/: CMakeLists.txt  KinectFreenect.cpp  KinectFreenectGl.cpp
code/face_view/eye_gaze_estimator/src/libsvm/: CMakeLists.txt  SVMWrapper.cpp  svm.cpp
code/face_view/eye_gaze_estimator/src/socket/: CMakeLists.txt  Socket.cpp
code/face_view/face_and_head/: .cproject  .project  CMakeLists.txt
code/face_view/face_and_head/data/: HighRGB_RegDepth.xml
code/face_view/face_and_head/src/: face_tracker_eyes_rt.hpp  head_pose.hpp  main.cpp
code/face_view/head_pose/src/: CMakeLists.txt  CRForestEstimator.cpp  calibrate_headpose.cpp  main.cpp
code/lk_template_matching/: get_mean_templates.m  show_mean_eyes.m  test_lk.m
code/mygaze_server/: calibration_test.m  server.py  xdata.txt  ydata.txt
code/plots/: dual_axis_stacked_histogram.py
code/register_depth_rgb_cpp/: CMakeLists.txt
code/register_depth_rgb_cpp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
code/register_depth_rgb_cpp/src/: calibrate.hpp  main.cpp
code/surf_features/: test_surf.m
code/table_view/: CMakeLists.txt
code/table_view/src/: CMakeLists.txt  main.cpp
code/table_view/src/socket/: Socket.cpp
code/table_view/src/table_view_lib/: Box3D.cpp  CMakeLists.txt  Cluster.cpp  KinectCalibParams.cpp  KinectUtilities.cpp  MutexWrapper.cpp  MyFreenectDevice.cpp  TableObjectDetector.cpp
kinect_scripts/: get_depth_data.m  get_rgb_data.m  init_device.m  stop_device.m  update_device_data.m
kinect_scripts/src/: Example.m  ExampleCP.m  ExampleIR.m  ExampleRS.m  ExampleRW.m  ExampleSK.m  compile_cpp_files.m  varsha_test.m
notes/: Top_view.odg
notes/room_measurements.graffle/: data.plist  image1.tiff
third_party_libs/: .directory
third_party_libs/segbench/: .directory
util/: .make_speech_commands.sh.swp  dataflow_README
util/annotate_eye_points/: README.txt  annotate_eyes.m  display_annotations.m  face_tracker_points.txt  face_tracker_points_corrected.txt  keyboard_annotate.m  new_face_tracker_points_corrected.txt  run_keyboard_annotae.m
util/calibrate_kinect/: align_depth_rgb.m  align_depth_rgb_checkerboard_params1.m  align_depth_rgb_images_params1.m  calibration-grasp8.yml  convert_raw_images.m  get_warp_map.m  grasp17.yml  grasp18.yml  grasp8.yml  load_raw_images.m  mrsl457.yml  parse_kinect_yaml.m  register_depth_rgb.m  rgbdemo_alignment.m
util/crop_eyes/: .fileCorresp.txt.swp  .gen_file_corresp.py.swo  .gen_file_corresp.py.swp  .im_files.txt.swp  crop_eye.m  crop_eyes.m  crop_eyes.m~  fileCorresp.txt  gen_file_corresp.py  gen_ft_points_from_video.py  generate_eye_grid.m  im_files.txt
util/face_rectification/: CMakeLists.txt  Makefile
util/face_rectification/matlab/: crop_eye.m  findHomography.m  plot_corresp.m  rectify_eye_image.m  rectify_eye_image_center_first.m  rectify_eyes.m  rectify_eyes.m~  rectify_eyes_final.m  rectify_eyes_final.m~  test_eye_rect.m  test_eye_rect.m~  test_eye_rect_center_first.m  test_eye_rect_center_first.m~
util/face_rectification/matlab/old/: rectify_eye_image.m  rectify_eye_image_center_first_old.m  rectify_eyes.m  rectify_eyes_center_first_old.m  rectify_image.m  transform_point.m
util/face_rectification/src/: .face_rectification.cpp.swp  face_rectification.cpp
util/face_rectification/src/exe/: .face_rectification.cc.swp  face_rectification.cc  face_rectification.cpp  face_rectification.d
util/in_place_of_vatic/: .directory  CMakeLists.txt  CMakeLists.txt~
util/in_place_of_vatic/images/: .directory
util/in_place_of_vatic/include/: .directory  config.h.in  hw4.h
util/in_place_of_vatic/nbproject/: Package-Default.bash  configurations.xml  project.xml
util/in_place_of_vatic/src/: .directory  CMakeCache.txt  Makefile  Selected_Points.txt  cmake_install.cmake  config.h  label_interest_points  label_interest_points.cpp  run_labeller.py
util/simple_kinect_cmake/: CMakeLists.txt  README
util/simple_kinect_cmake/cmake/Modules/: FindFreenect.cmake
util/simple_kinect_cmake/src/: MutexWrapper.h  MyFreenectDevice.cpp  main.cpp
(+837 files in other folders)
